change save path

--- a/protein_pKa.ipynb
+++ b/protein_pKa.ipynb
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,16 +1644,16 @@
     "        fig.add_trace(trace)\n",
     "        data.append(trace)\n",
     "\n",
-    "    layout = dict(title = 'TEST',)\n",
+    "    layout = dict(title = PDBID.upper(),)\n",
     "\n",
     "    F = dict(data=data, layout=layout)\n",
-    "    py.offline.plot(F, filename = PDBID + '.html')\n",
+    "    py.offline.plot(F, filename = 'sample_graphs/' +PDBID + '.html')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
